src/style.css
/* black-color: #374a52  rgba(55,74,82,255) */

/* Deep-black #233339 rgba(35,51,57,255) */

/* Deepest-black #151d21 rgba(21,29,33,255) */

/* Pink-color #ff0044 rgba(255,0,68,255) */

/* white-color #fefefe rgba(254,254,254,255) */

@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans+Narrow&display=swap');

*,
*::after,
*::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body {
  margin: 0;
  padding: 0;
  color: white;
  font-family: 'PT Sans Narrow', sans-serif;
}

body {
  background:
    linear-gradient(
      to bottom,
      #151d21 20%,
      #233339,
      #374a52 50%,
      #233339,
      #151d21
    );
}

h1 {
  font-family: 'Bebas Neue', cursive;
}

ul {
  list-style: none;
}

a {
  color: inherit;
  text-decoration: none;
}

img {
  max-width: 100%;
}

header {
  padding: 2rem 0;
}

.container {
  width: 95%;
  max-width: 1200px;
  margin: 0 auto;
}

.container--small {
  max-width: 850px;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-links {
  display: flex;
  gap: 5rem;
  align-items: center;
  font-weight: bold;
  font-size: 20px;
}

.logo {
  width: 90px;
}

.nav-item a {
  transition: all 0.9s;
}

.nav-item a:hover {
  color: #f04;
  font-size: 1rem;
}

.section-shows {
  padding: 3rem 0;
}

.section-shows__title {
  margin-bottom: 2rem;
}

.list-shows {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(105px, 1fr));
  grid-gap: 2rem;
}

.show__img {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  gap: 0.5rem;
  padding: 0.5rem;
  border-radius: 2px;
  height: 160px;
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url(./images/background.gif);
  background-position: center center;
  background-size: 100%;
  background-repeat: no-repeat;
  transition: all 0.5s;
}

.show__img:hover {
  background-size: 120%;
}

.show__info {
  display: grid;
  align-items: center;
  grid-template-columns: 20px 10px 1fr;
}

.show__like {
  transition: all 0.3s;
  cursor: pointer;
}

.show__like:hover {
  color: #f04;
}

.show__comment {
  color: #fff;
  grid-column: -1;
  cursor: pointer;
  transition: all 0.3s;
  /* stylelint-disable-next-line custom-property-empty-line-before */
  --ionicon-stroke-width: 50px;
}

.show__comment:hover {
  color: #f04;
footer {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.footer-content {
  width: 80%;
  margin: auto;
  padding: 20px 0;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.footer-content img {
  width: 50px;
}

.footer-content section {
  width: 30%;
  padding: 10px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-end;
}

.footer-content section:first-child {
  align-items: flex-start;
}

.footer-content section h2 {
  font-size: 18px;
  color: #f04;
  font-family: 'Bebas Neue', cursive;
}

.footer-content section ul {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 0;
  margin: 0;
}

.footer-content section:first-child ul {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  gap: 1rem;
  list-style: none;
}

.footer-content section:first-child ul li {
  list-style: none;
}

